--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,8 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Lab2"
         tools:targetApi="31">
+
+        <!-- Remove one of the MainActivity declarations -->
         <activity
             android:name=".MainActivity"
             android:exported="true"
@@ -19,10 +21,15 @@
             android:theme="@style/Theme.Lab2">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <!-- Keep this declaration for NameActivity -->
+        <activity
+            android:name=".NameActivity"
+            android:exported="false" />
+
     </application>
 
 </manifest>
